Add initial content

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -2,15 +2,15 @@ section(class="canvas front" id="front")
 
     div(class="content")
 
-        h2 Headline
+        h2 Bob And Shirley Says
 
         div
 
-            p Good spot for a tagline.
+            p Watch Livestream from Nowadays, and more in coming days, stay safe, stay home, stay dancing
 
             div
 
-                a(href="#section-2") Button 1
-                a(href="#section-3") Button 2
+                a(href="#section-2") Zoom Link
+                a(href="#section-3") Stream Link
 
     +nav-1("section-1")
