--- a/src/templates/_/body.pug
+++ b/src/templates/_/body.pug
@@ -4,22 +4,22 @@ block body
 
     body(id=bodyId class=bodyClass)
 
-        block header
+        //- block header
 
-            +header-1("/#front", "header-1-logo", "Header", [
-                {
-                    href: "/#section-1",
-                    name: "Section 1"
-                },
-                {
-                    href: "/#section-2",
-                    name: "Section 2"
-                },
-                {
-                    href: "/#section-3",
-                    name: "Section 3"
-                }
-            ])
+        //-     +header-1("/#front", "header-1-logo", "Header", [
+        //-         {
+        //-             href: "/#section-1",
+        //-             name: "Section 1"
+        //-         },
+        //-         {
+        //-             href: "/#section-2",
+        //-             name: "Section 2"
+        //-         },
+        //-         {
+        //-             href: "/#section-3",
+        //-             name: "Section 3"
+        //-         }
+        //-     ])
 
         block main
 
