--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -2,7 +2,7 @@ section(class="canvas front" id="front")
 
     div(class="content")
 
-        h2 Bob And Shirley Says
+        h2 Bob & Shirley Says
 
         div
 
