Add link to nowadays

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,7 +6,9 @@ section(class="canvas front" id="front")
 
         div
 
-            p Watch Livestream from Nowadays, and more in coming days, stay safe, stay home, stay dancing
+            p Watch Livestream from
+            a(href="https://nowadays.nyc/") Nowadays
+            , and more in coming days, stay safe, stay home, stay dancing
 
             div
 
