--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,9 +6,7 @@ section(class="canvas front" id="front")
 
         div
 
-            p Watch Livestream from
-            a(href="https://nowadays.nyc/") Nowadays
-            , and more in coming days, stay safe, stay home, stay dancing
+            p Watch SPLivestream from <a href="https://nowadays.nyc/">Nowadays</a>, and more in coming days, stay safe, stay home, stay dancing
 
             div
 
