--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,13 +6,13 @@ section(class="canvas front" id="front")
 
         div
 
-            p Watch SPF_50 (Sven Perkleberg Forever) Livestream from <a target="_blank" href="https://nowadays.nyc/">Nowadays</a> Sunday March 15, 5pm - 7pm est. <br><br> there will be more in coming days, stay safe, stay home, stay dancing
+            p Livestream from <a target="_blank" href="https://nowadays.nyc/">Nowadays</a> Sunday March 15, 5pm - 7pm est. <br><br> stay safe, stay home, stay dancing
 
             div
 
                 a(href="#section-2") Video Chat Link
                 a(href="#section-3") Audio Stream Link
 
-            p  You will need to download the free Zoom.us app for desktop or phone: <a target="_blank" href="https://zoom.us/download#client_4meeting">here</a>
+            p  <br>You will need to download the free Zoom.us app for desktop or phone: <a target="_blank" href="https://zoom.us/download#client_4meeting">here</a>
 
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
