add streaming link

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -11,7 +11,7 @@ section(class="canvas front" id="front")
             div
 
                 a(href="#section-2") Video Chat Link
-                a(href="#section-3") Audio Stream Link
+                a(href="https://nowadays.nyc/stream/" target="_blank") Audio Stream Link
 
             p  <br>You will need to download the free Zoom.us app for desktop or phone: <a target="_blank" href="https://zoom.us/download#client_4meeting">here</a>
 
