--- a/src/components/footers/3/_.pug
+++ b/src/components/footers/3/_.pug
@@ -4,17 +4,17 @@ footer(
     itemscope
     itemtype="https://schema.org/WPFooter")
 
-    div
+    //- div
 
-        .left
+    //-     .left
 
-            ul
-                li &copy; Name
-                li: a(href="#") Privacy &amp; Terms
+    //-         ul
+    //-             li &copy; Name
+    //-             li: a(href="#") Privacy &amp; Terms
 
-        .right
+    //-     .right
 
-            ul
-                li: a(href="https://twitter.com/#").t t
-                li: a(href="https://fb.me/#/").f f
-                li: a(href="https://plus.google.com/#").g g+
+    //-         ul
+    //-             li: a(href="https://twitter.com/#").t t
+    //-             li: a(href="https://fb.me/#/").f f
+    //-             li: a(href="https://plus.google.com/#").g g+
