Really block footers

--- a/src/templates/_/body.pug
+++ b/src/templates/_/body.pug
@@ -23,9 +23,9 @@ block body
 
         block main
 
-        block footer
+        //- block footer
 
-            include ../../components/footers/2/_
+        //-     include ../../components/footers/2/_
 
         //- end-of-body script insertion
         block inject
