--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -10,7 +10,7 @@ section(class="canvas front" id="front")
 
             div
 
-                a(href="https://us04web.zoom.us/j/648973018" target="_blank") Group Video Stream
+                a(href="https://us04web.zoom.us/j/648973018" target="_blank") Dancers Stream
                 a(href="https://nowadays.nyc/stream/" target="_blank") <img src="https://static.wixstatic.com/media/2e9fa3_d9e81c2dc963428bbb5e4886a83d8f9c~mv2.gif" width="18"> Nowadays Video Stream (Audio)
 
             p  <br>You will need to download the free Zoom.us app for desktop or phone: <a target="_blank" href="https://zoom.us/download#client_4meeting">here</a>
