Try iframe zoom

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -14,5 +14,7 @@ section(class="canvas front" id="front")
                 a(href="https://nowadays.nyc/stream/" target="_blank") <img src="https://static.wixstatic.com/media/2e9fa3_d9e81c2dc963428bbb5e4886a83d8f9c~mv2.gif" width="18"> Nowadays Video Stream (Audio)
 
             p  <br>You will need to download the free Zoom.us app for desktop or phone: <a target="_blank" href="https://zoom.us/download#client_4meeting">here</a>
-
+<div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
+    <iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://success.zoom.us/wc/join/648973018" frameborder="0"></iframe>
+	</div>
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
