--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,15 +6,10 @@ section(class="canvas front" id="front")
 
         div
 
-            p Livestream from <a target="_blank" href="https://nowadays.nyc/">Nowadays</a> Sunday March 15, 5pm - 7pm est. <br><br> stay safe, stay home, stay dancing
+            p Livestream from Gabri <br><br> stay safe, stay home, stay dancing
 
             div
 
                 a(href="https://us04web.zoom.us/j/648973018" target="_blank") Dancers Stream
-                a(href="https://nowadays.nyc/stream/" target="_blank") <img src="https://static.wixstatic.com/media/2e9fa3_d9e81c2dc963428bbb5e4886a83d8f9c~mv2.gif" width="18"> Nowadays Video Stream (Audio)
-
-            p  <br>You will need to download the free Zoom.us app for desktop or phone: <a target="_blank" href="https://zoom.us/download#client_4meeting">here</a>
-<div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
-    <iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://success.zoom.us/wc/join/648973018" frameborder="0"></iframe>
-	</div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y86wEoki0Zs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
