--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -8,9 +8,8 @@ section(class="canvas front" id="front")
 
             p Livestream from Gabri <br><br> stay safe, stay home, stay dancing
 
+            div(id="twitch-embed")
             div
-                   <div id="twitch-embed"></div>
-
                     <!-- Load the Twitch embed script -->
                     <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
