add parent website

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -8,6 +8,6 @@ section(class="canvas front" id="front")
 
             p Livestream from Gabri <br><br> stay safe, stay home, stay dancing
 
-            <iframe src="https://player.twitch.tv/?flumperfern&parent=streamernews.example.com" height="<height>" width="<width>" frameborder="<frameborder>" scrolling="<scrolling>" allowfullscreen="<allowfullscreen>"></iframe>
+            <iframe src="https://player.twitch.tv/?flumperfern&parent=bobshirley.xyz" height="<height>" width="<width>" frameborder="<frameborder>" scrolling="<scrolling>" allowfullscreen="<allowfullscreen>"></iframe>
 
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
