--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -7,6 +7,5 @@ section(class="canvas front" id="front")
         div
 
             p Livestream from Gabri <br><br> stay safe, stay home, stay dancing
-            <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from flumperfern on www.twitch.tv</a>
-
+            <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Bob & Shirley Says</a>
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
