--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -3,10 +3,11 @@ section(class="canvas front" id="front")
     div(class="content")
 
         h2 Bob & Shirley Says:
+        p stay safe, stay home, stay dancing
 
         div
 
-            p Livestream from Fernelly <br><br> stay safe, stay home, stay dancing
+            p Livestream from Fernelly
             <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-            <br/><br/>
+            <br><br>
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
