Image resize for real

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -8,7 +8,8 @@ section(class="canvas front" id="front")
         div
             a(href="https://zoom.us/j/162127076" target="_blank") Dancers Stream
             <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-            <img src="https://f4.bcbits.com/img/a2200554287_10.jpg" height="400">
+            Suzanne Menzel's 1981 album “Goodbyes and Beginnings” <img src="https://f4.bcbits.com/img/a2200554287_10.jpg" width="300">
             Support the artists and labels that put the music out! Amazing reissue can be found <a href="https://frederiksbergrecords.bandcamp.com/album/goodbyes-and-beginnings">here</a>
-            <br><br>
+
+
             a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
