--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,7 +6,7 @@ section(class="canvas front" id="front")
         p stay safe, stay home, stay dancing
 
         div
-            a(href="https://zoom.us/j/162127076" target="_blank") Dancers Stream
+            a(href="https://zoom.us/j/162127076" target="_blank" class="myButton") Dancers Stream
             <br>
 
         <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
