--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,15 +4,15 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p stay safe, stay home, stay dancing
-
+        h5 Saturday March 28, 12pm EST
         div
             p <a href="https://zoom.us/j/162127076" target="_blank" class="myButton"> Dancers Stream </a>
 
 
         <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="https://f4.bcbits.com/img/a2200554287_10.jpg" width="300">
-        Suzanne Menzel's 1981 album “Goodbyes and Beginnings”
-        Support the artists and labels that put the music out! Amazing reissue can be found <a href="https://frederiksbergrecords.bandcamp.com/album/goodbyes-and-beginnings">here</a>
+        <img src="https://f4.bcbits.com/img/a4292409228_10.jpg" width="300">
+        FLANGER MAGAZINE album "Breslin"
+        Support the artists and labels that put the music out! Order it here <a href="https://sophomorelounge.bandcamp.com/album/flanger-magazine-breslin">here</a>
 
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
