--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -10,7 +10,7 @@ section(class="canvas front" id="front")
 
         <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
         <img src="https://f4.bcbits.com/img/a4292409228_10.jpg" width="300">
-        p Support the artists and labels that put the music out! Order it here <a href="https://sophomorelounge.bandcamp.com/album/flanger-magazine-breslin">here</a>
+        p Support the artists and labels that put the music out! Order it here <a href="https://www.flangermagazine.com/">here</a>
 
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
