--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,8 +4,7 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p stay safe, stay home, stay dancing
-        h5 Breslin - FLANGER MAGAZINE
-            [[ Saturday March 28, 12pm EST ]]
+        h5 Breslin - FLANGER MAGAZINE [[ Saturday March 28, 12pm EST ]]
         p <a href="https://zoom.us/j/605470498" target="_blank" class="myButton"> Zoom Video Stream </a>
 
         <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
