--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,12 +4,12 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p stay safe, stay home, stay dancing
-        h5 Breslin - FLANGER MAGAZINE [[ Saturday March 28, 12pm EST ]]
-        p <a href="https://zoom.us/j/605470498" target="_blank" class="myButton"> Zoom Video Stream </a>
+        h5 Fernelly ambient set [[ Thursday April 2, 1pm EST ]]
+        h5 Fernelly Live set [[ Thursday April 2, 8pm EST ]]
+        p <a href="https://zoom.us/j/729249633" target="_blank" class="myButton"> Zoom Video Stream </a>
 
         <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="https://f4.bcbits.com/img/a4292409228_10.jpg" width="300">
-        p Support the artists and labels that put the music out! Order it here <a href="https://www.flangermagazine.com/">here</a>
-        p <q>Breslin is the most recent release by artist Chris Bush aka Flanger Magazine (see Caboladies/Flower Man & Equipment Pointed Ankh) and in my humble opinion one of the most successful attempts at blending acoustic and synthesized sound.  Bush has been around in the modular and noise world for years sharing release with Oneohtrix Point Never, Robert Beatty and more…. Honestly none of that matters.  I clean my house to this record and its sounds I can only describe as “natural.”  Pull up a chair and chill out. </q>
+        <img src="/assets/images/fernelly.jpg" width="300">
+        p Support the artists and labels that put the music out! Venmo @fernelly
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
