--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -9,7 +9,7 @@ section(class="canvas front" id="front")
         p <a href="https://zoom.us/j/729249633" target="_blank" class="myButton"> Zoom Video Stream </a>
 
         <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/fernelly.jpg" width="300">
+        <img src="/assets/images/global/_link/fernelly.jpg" width="300">
         p Support the artists and labels that put the music out! Venmo @fernelly
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
