--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -3,7 +3,7 @@ section(class="canvas front" id="front")
     div(class="content")
 
         h2 Bob & Shirley Says:
-        p stay safe, stay home, stay dancing
+        p stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://baggu.com/products/mask-donation-20">here</a> to send n95 masks directly to hospitals!
         h5 Fernelly ambient set [[ Thursday April 2, 1pm EST ]]
         h5 Fernelly Live set [[ Thursday April 2, 8pm EST ]]
         p <a href="https://zoom.us/j/118778495" target="_blank" class="myButton"> Zoom Video Stream </a>
