--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,11 +4,12 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://baggu.com/products/mask-donation-20">here</a> to send n95 masks directly to hospitals!
-        h5(style="text-align: center;") Gabri - Chilly Gonzales Über Alles<br>[[ Saturday April 4, 12pm EST ]]
-        p <a href="https://zoom.us/j/532978208" target="_blank" class="myButton"> Zoom Video Stream </a>
+        h5(style="text-align: center;") Fernelly DJ set<br>[[ Saturday April 4, 1:30pm EST ]]
+
         div unmute twitch for audio stream below:
-        <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="https://images-na.ssl-images-amazon.com/images/I/41awFWfshDL.jpg" width="300">
-        p(style="text-align: center;") Chilly Gonzales debut album Über Alles is a beautifully diverse music trip through electro, jazz, hip hop, and more great stuff. <br>Support the artists and labels that put the music out <a href="https://chillygonzales.store-08.com/solo-piano-iii/" targe="_blank">here</a>
+        <iframe src="https://player.twitch.tv/?channel=flumperfern" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/flumperfern?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
+        <img src="/assets/images/global/_link/fernelly.jpg" width="300">
+        p Support the artists and labels that put the music out! Venmo @fernelly
+        p(style="text-align: center;") <br>Support the artists and labels that put the music out <a href="https://chillygonzales.store-08.com/solo-piano-iii/" targe="_blank">here</a>
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
