--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -9,6 +9,6 @@ section(class="canvas front" id="front")
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
         <img src="/assets/images/global/_link/troublemakers.jpg" width="300">
-        p Troublemakers - Express Way (2004) Released by Blue Note Records  Troublemakers, was an electronic music band from Marseille formed by Fred Berthet, Lionel Corsini (DJ Oil), and Arnaud Taillefer. Their appreciation for '60s / '70s jazz, funk & film scores - plus dance elements - produced a distinctive electric sound.  Express Way is the bands's second/last album and is the soundtrack for 52min Short Film - Express Way (not easy to find) Support the artists and labels that put the music out!
+        p Troublemakers - Express Way (2004) Released by Blue Note Records  Troublemakers, was an electronic music band from Marseille formed by Fred Berthet, Lionel Corsini (DJ Oil), and Arnaud Taillefer. Their appreciation for '60s / '70s jazz, funk & film scores - plus dance elements - produced a distinctive electric sound.  Express Way is the bands's second/last album and is the soundtrack for 52min Short Film - Express Way (not easy to find)
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
