Readd zoom link

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -5,7 +5,7 @@ section(class="canvas front" id="front")
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://baggu.com/products/mask-donation-20">here</a> to send n95 masks directly to hospitals!
         h5(style="text-align: center;") Waldo Record set<br>[[ Saturday April 11, 12:00pm EST ]]
-
+        p <a href="https://zoom.us/j/903489360" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
         <img src="/assets/images/global/_link/troublemakers.jpg" width="300">
