--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,11 +4,10 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://baggu.com/products/mask-donation-20">here</a> to send n95 masks directly to hospitals!
-        h5(style="text-align: center;") Waldo Record set<br>[[ Saturday April 11, 12:00pm EST ]]
-        p <a href="https://zoom.us/j/903489360" target="_blank" class="myButton"> Zoom Video Stream </a>
+        h5(style="text-align: center;") SPF 50 & Albert<br>[[ Thursday April 16, 8:00pm EST ]]
+        p <a href="https://zoom.us/j/91315565968" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/global/_link/troublemakers.jpg" width="300">
-        p Troublemakers - Express Way (2004) Released by Blue Note Records  Troublemakers, was an electronic music band from Marseille formed by Fred Berthet, Lionel Corsini (DJ Oil), and Arnaud Taillefer. Their appreciation for '60s / '70s jazz, funk & film scores - plus dance elements - produced a distinctive electric sound.  Express Way is the bands's second/last album and is the soundtrack for 52min Short Film - Express Way (not easy to find)
+        <img src="/assets/images/global/_link/spf_albert.jpg" width="300">
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
