remove acap link

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -3,7 +3,7 @@ section(class="canvas front" id="front")
     div(class="content")
 
         h2 Bob & Shirley Says:
-        p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a> The <a href="http://www.acaponline.org/" target="_blank">Association of Chinese American Physicians</a>  (ACAP) is getting lifesaving PPE to hospitals in underserved communities of NYC. These communities are the least prepared and their hospitals the least funded.  Please donate to this very important cause!
+        p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a> The Association of Chinese American Physicians (ACAP) is getting lifesaving PPE to hospitals in underserved communities of NYC. These communities are the least prepared and their hospitals the least funded.  Please donate to this very important cause!
         h5(style="text-align: center; margin-top: 0em;") SPF 50 & Albert<br>[[ Thursday April 16, 8:00pm EST ]]
         p <a href="https://zoom.us/j/91315565968" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
