--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -3,11 +3,11 @@ section(class="canvas front" id="front")
     div(class="content")
 
         h2 Bob & Shirley Says:
-        p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help solve the PPE problem donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a> The Association of Chinese American Physicians (ACAP) is getting lifesaving PPE to hospitals in underserved communities of NYC. These communities are the least prepared and their hospitals the least funded.  Please donate to this very important cause!
-        h5(style="text-align: center; margin-top: 0em;") SPF 50 & Albert<br>[[ Thursday April 16, 8:00pm EST ]]
-        p <a href="https://zoom.us/j/91315565968" target="_blank" class="myButton"> Zoom Video Stream </a>
+        p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help get PPE to the frontlines where it makes a real difference, donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a>
+        h5(style="text-align: center; margin-top: 0em;") GIGI - Illuminated Audio<br>[[ Saturday April 18, 12:00pm EST ]]
+        p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/global/_link/spf_albert.jpg" width="300">
-
+        <img src="/assets/images/global/_link/gigi-illuminatd.jpg" width="300">
+        p A soothing journey through ethereal ambience and dub
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
