--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -9,4 +9,6 @@ section(class="canvas front" id="front")
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
         <img src="/assets/images/global/_link/drb-image.jpg" width="300">
+        <img src="https://thumbs.gfycat.com/RightEvenEchidna-size_restricted.gif" width="300">
+
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
