--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,11 +4,12 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help get PPE to the frontlines where it makes a real difference, donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a>
-        h5(style="text-align: center; margin-top: 0em;") Nuevo by Kronos Quartet<br>[[ Saturday April 25, 12:00pm EST ]]
+        h5(style="text-align: center; margin-top: 0em;") Fela Kuti - Shakara and Tony Allen - Progress<br>[[ Saturday May 2, 12:00pm EST ]]
         p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/global/_link/drb-image.jpg" width="300">
+        <img src="/assets/images/global/_link/daniel-tony-allen.jpg" width="300">
+        p This Saturday (12pm EST) we are going to pause our ongoing calendar of single records in order to pay tribute to the great legend, Tony Allen, who left us yesterday. Tony Allen, with his own hands, created a sound and genre that, probably more than any other one, found that ideal mixture of outgoing, vital energy and introspective journey providing a fundamental inspiration for the history of music.
         <img src="https://thumbs.gfycat.com/RightEvenEchidna-size_restricted.gif" width="300">
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
