Misnamed main image

--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -8,7 +8,7 @@ section(class="canvas front" id="front")
         p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/global/_link/daniel-tony-allen.jpg" width="300">
+        <img src="/assets/images/global/_link/daniel-tony-allen.png" width="300">
         p This Saturday (12pm EST) we are going to pause our ongoing calendar of single records in order to pay tribute to the great legend, Tony Allen, who left us yesterday. Tony Allen, with his own hands, created a sound and genre that, probably more than any other one, found that ideal mixture of outgoing, vital energy and introspective journey providing a fundamental inspiration for the history of music.
         <img src="https://thumbs.gfycat.com/RightEvenEchidna-size_restricted.gif" width="300">
 
