--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,12 +4,12 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help get PPE to the frontlines where it makes a real difference, donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a>
-        h5(style="text-align: center; margin-top: 0em;") BROADCAST - The Noise Made by People (2000)<br>[[ Saturday May 9, 12:00pm EST ]]
+        h5(style="text-align: center; margin-top: 0em;") Special Herbs, Vol. 1, Vol. 2<br>[[ Saturday May 16, 12:00pm EST ]]
         p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/global/_link/daniel-broadcast.jpg" width="300">
-        p Self produced debut album of the British band from Birmingham. Their sound is a delicate blend of 1960s psychedelia elements with experimental electronica and a vein of Brit-pop. Sadly, the singer/multiinstrumentalist Trish Keenan died of pneumonia, as complication of the H1N1 flu in 2011. She left us a few widely lauded elegant psychedelic pearls.
+        <img src="/assets/images/global/_link/lua-specialherbs.jpg" width="300">
+        p Hiding behind a mask and a plethora of pseudonyms while working in collaboration as both spotlight-grabbing rapper and behind-the-scenes producer, MF Doom has enjoyed two decades as one of hip-hop's most restless and prolific artists. These are the first two albums of his vast Special Herbs project, an all-instrumental series of discs put out under his Metal Fingers moniker.
         <img src="https://thumbs.gfycat.com/RightEvenEchidna-size_restricted.gif" width="300">
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
