--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -4,11 +4,11 @@ section(class="canvas front" id="front")
 
         h2 Bob & Shirley Says:
         p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help get PPE to the frontlines where it makes a real difference, donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a>
-        h5(style="text-align: center; margin-top: 0em;") FULL TIME - Fernelly and Tom<br>[[ Saturday May 16, 10:00pm EST ]]
+        h5(style="text-align: center; margin-top: 0em;") Miriam Makeba - Miriam Makeba 1960<br>[[ Saturday May 23, 12:00pm EST ]]
         p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
-        <img src="/assets/images/global/_link/fernelly.jpg" width="300">
+        <img src="/assets/images/global/_link/miriam-makeba.png" width="300">
         <img src="https://thumbs.gfycat.com/RightEvenEchidna-size_restricted.gif" width="300">
 
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
