--- a/src/templates/_/head.pug
+++ b/src/templates/_/head.pug
@@ -3,7 +3,7 @@ head
     meta(charset="utf-8")
 
     block description
-        meta(name="description" content="Bob and Shirley says: SpaceX - DM-2 Humans from USA -> Space May 27, 4:33pm est")
+        meta(name="description" content="Bob and Shirley says: The Durutti Column May 30, 12:00pm est")
 
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5")
     meta(name="generator" content="Platframe")
