--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -3,11 +3,10 @@ section(class="canvas front" id="front")
     div(class="content")
 
         h2 Bob & Shirley Says:
-        p(style="text-align: center;") stay safe, stay home, stay dancing <br><br> Help get PPE to the frontlines where it makes a real difference, donate <a href="https://www.gofundme.com/f/gx6gs-a-cause-i-care-about-needs-help">here</a>
-        h5(style="text-align: center; margin-top: 0em;") SpaceX - DM-2 Humans from USA -> Space #2 <br>[[ Saturday May 30, 3:22pm EST ]]
+        p(style="text-align: center;") stay 6 feet apart, stay peaceful, stay safe <br><br> Look at Sybrina Fulton (Trayvon Martin's Mother) who is trying to turn injustice and tradegy into change by running for Miami-Dade County Commissioner <a href="https://sybrinafulton.com/">here</a>
+        h5(style="text-align: center; margin-top: 0em;") Wendell Harrison & Phillip Ranelin: Message From The Tribe <br>[[ Saturday June 6, 12:00pm EST ]]
         p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
-        div Watch Youtube NASA Stream:
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/bIZsnKGV8TE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/cXX6jgeP-5I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="https://thumbs.gfycat.com/RightEvenEchidna-size_restricted.gif" width="300">
+        div unmute twitch for audio stream below:
+        <iframe src="https://player.twitch.tv/?channel=Bob_shirley" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
+        <img src="/assets/images/global/_link/fernelly-6-1.jpg" width="300">
         a(href="mailto:bobshirleysays@gmail.com") bobshirleysays@gmail.com
