Marco daniel title and image fix

--- a/src/templates/_/head.pug
+++ b/src/templates/_/head.pug
@@ -3,7 +3,7 @@ head
     meta(charset="utf-8")
 
     block description
-        meta(name="description" content="Bob and Shirley says: Wendell Harrison & Phillip Ranelin: Message From The Tribe June 6, 12:00pm est")
+        meta(name="description" content="Bob and Shirley says: Susumu Yokota: Sakura - 1999 August 15, 11:00am est")
 
     meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5")
     meta(name="generator" content="Platframe")
