--- a/src/templates/views/_/front.pug
+++ b/src/templates/views/_/front.pug
@@ -6,7 +6,7 @@ section(class="canvas front" id="front")
         p(style="text-align: center;") stay 6 feet apart, stay peaceful, stay safe <br><br>
 
         h5(style="text-align: center; margin-top: 0em;") Susumu Yokota: Sakura - 1999 <br>[[ Saturday August 15, 11:00am EST ]]
-        p <a href="https://zoom.us/j/93836508434" target="_blank" class="myButton"> Zoom Video Stream </a>
+        p <a href="https://us02web.zoom.us/j/84642703184" target="_blank" class="myButton"> Zoom Video Stream </a>
         div unmute twitch for audio stream below:
         <iframe src="https://player.twitch.tv/?channel=Bob_shirley&parent=bobshirley.xyz" frameborder="0" allowfullscreen="true" scrolling="no" width="300"></iframe><a href="https://www.twitch.tv/Bob_shirley?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;"></a>
         <img src="/assets/images/global/_link/marco_daniel.jpg" width="300">
